--- a/src/views/paginas/crearEquipoPadel.hbs
+++ b/src/views/paginas/crearEquipoPadel.hbs
@@ -20,8 +20,8 @@
                             
                             <select name="idDeportes" class="btn btn-ls btn-outline-primary" required>
                                 <option type="" value="">FORMATO</option>
-                                <option type="number" value="1">Pádel 1</option>
-                                <option type="number" value="2">Pádel 2</option>
+                                <option type="number" value=5>Pádel </option>
+                               
                             </select>
                         </div>
                     </div>
