--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -104,4 +104,7 @@
     <div class="text-white p-3">
         * Datos Obligatorios para mejor experiencia de usuario. Gracias!
     </div>
+     <div style="float: left" class="col-2  p-4">
+        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+    </div>
 </div>
