--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -20,5 +20,8 @@
             </div>
             {{/each}}
         </div>
+        <div style="float: left" class="col-2  p-4">
+            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+        </div>
     </div>
 </div>
