--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -1,5 +1,5 @@
 <div id="padel">
-    <div class="container-fluid">
+    <div class="container-fluid pt-5">
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <div class="d-flex">
@@ -18,13 +18,11 @@
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
                         <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar"
-                            autofocus required>
-                        
+                            autofocus required>                        
                         <button class="btn btn-danger" type="reset">
                             <i class="fas fa-search"></i> 
                         </button>
                     </div>
-
                 </div>
                 <div id="scroll">
                     <table class="table table-hover table-info">
@@ -49,7 +47,6 @@
                     </table>
                 </div>
             </div>
-
     <!--Tabla Canchas-->
             <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <form class="d-flex">
@@ -75,15 +72,15 @@
                                 <th>Número</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            
+                        <tbody>                            
                             {{#each cancha}}
-                            <tr>
+                             <tr>
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
-                                    {{nombreUsuario}}
+                                  <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
-                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
-                                <td>{{deporte}}</td>
+                                <td><a href="#">{{direccion}}</a></td>
+                                <td><b>#</b></td>
+                                <td><b>#</b></td>
                             </tr>
                             {{/each}}
                         </tbody>
@@ -93,24 +90,19 @@
         </div>
     </div>
     
-    <div class="col-2  p-4">
+    <div class="col-2 pt-4">
         <a id="volver" href="/paginas/deporte" type="button" class="btn btn-danger">Volver</a>
     </div>
-
 </div>
-
-
 <!-- The Modal -->
 <div class="modal fade" id="misEquipo" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content bg-dark">
-
             <!-- Modal Header -->
             <div class="modal-header" id="misEquipo">
                 <h4 class="modal-title">MIS EQUIPOS</h4>
                 <button type="button" class="close" data-bs-dismiss="modal" id="crearEquipo">&times;</button>
             </div>
-
             <!-- Modal body -->
             <div class="modal-body" id="misEquipo">
                 <table class="table text-center">
