--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -1,3 +1,4 @@
+<div id="ticket" style="height: 50vw; width: 100vw">
 <div class="container">
     <table class="table table-success table-striped ">
         <h3 class="text-white text-center">Mis Reservas</h3>
@@ -21,6 +22,7 @@
         </tbody>
     </table>
 </div>
-<div style="float: left" class="col-2  p-4">
+<div style="float: left" class="col-2 p-5">
     <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+</div>
 </div>
