--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -28,17 +28,17 @@
                 <li class="container-fluid">
                     <a type="link" class="nav-link" href="#" aria-disabled="true" data-bs-toggle="modal"
                 data-bs-target="#nosotros" aria-controls="offcanvasRight">Nosotros</a>
-                </li>
-                  <li class="container-fluid">
-                    <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/duenio" aria-disabled="true" style="display: none;" aria-controls="offcanvasRight">Cancha</a>
-                </li>
+             
                   <li class="container-fluid">
                     <a type="link" class="nav-link" href="/paginas/reservaUsuario/{{user.idUsuarios}}" aria-disabled="true"
                  aria-controls="offcanvasRight">Mis Reservas</a>
                 </li>
-
                 <li class="container-fluid">
                     <a type="button" class="btn btn-primary" href="/paginas/reservaDeporte">Reservá ya!</a>
+                </li>
+                   </li>
+                  <li class="container-fluid">
+                    <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/duenio" aria-disabled="true" style="display: none;" aria-controls="offcanvasRight">Canchas</a>
                 </li>
             </ul>
         </div>
@@ -137,7 +137,7 @@
 {{/if}}
 <script> 
     var estado 
-    if ({{user.idRol}} === 2) {
+    if ({{user.idRol}} == 2) {
      estado= "block"
      }else{
      estado= "none"}
