--- a/src/views/paginas/establecimiento.hbs
+++ b/src/views/paginas/establecimiento.hbs
@@ -1,9 +1,10 @@
 <div id="cancha">
     <div class="col-md-6 mx-auto p-5">
-        <form id="semiTransparente">
-            <div class="text-center mb-4 p-2">
-                <h2 class="text-white">Nuevo Establecimiento</h2>
-            </div>
+        
+        <div class=" card text-center mb-4 p-1">
+            <h2>Nuevo Establecimiento</h2>
+        </div>
+        <form id="semiTransparente" class=" p-2">
             <div class="input-group mb-3 px-3">
                 <input type="text" class="form-control" id="validationDefault01"
                     placeholder="Nombre del Establecimiento" autofocus required>
@@ -18,6 +19,7 @@
                 <label for="formFile" class="text-white"><b>Logo (opcional)</b></label>
                 <input class="form-control" type="file" id="formFile">
             </div>
+            <span><hr class="dropdown-divider"></span>
             <div class="col-md-6 mx-auto pb-3">
                 <button type="submit" class="btn btn-success btn-block">
                     Cargar
