--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -1,14 +1,22 @@
-<div class="col-4 m-0 bg-white py-5">
-    
-    <div class="text-center" disbled>
-        <h3>Elige un Deporte</h3>
-        <form action="/paginas/reservaDeporte1/" method="GET">
-        <select name="deporte" id="">
-            {{#each deporte}}
-            <option value="{{idDeportes}}">{{deporte}}</option>
-             {{/each}}
-        </select>
-        <button type="submit" class="btn btn-success">Aceptar</button>
-        </form>
-    </div>  
+<div id="inicio">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100" style="width: 34%"></div>
+    </div>
+    <main>
+        <div class="d-flex flex-column p-3 text-white bg-dark" style="width: 300px; height: 530px;">
+            <div class="text-center" disbled>
+                <h3>Elige un Deporte</h3>
+                <form action="/paginas/reservaDeporte1/" method="GET">
+                <select name="deporte" id="">
+                    {{#each deporte}}
+                    <option value="{{idDeportes}}">{{deporte}}</option>
+                    {{/each}}
+                </select>
+                <button type="submit" class="btn btn-success">Aceptar</button>
+                </form>
+            </div>
+        </div>
+
+    </main>
+
 </div>
