--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -1,4 +1,4 @@
-<div id="cancha">
+<div id="cancha" style="height: 40vw; width: 100vw>
     <div class="container">
         <h2 class="mb-3 text-white text-center">MIS CANCHAS</h2>
         <div class="row justify-content-around">
