--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -1,10 +1,10 @@
 <div id="inicio">
     <div class="container-flex">
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-around p-4">
             <div id="btnCentro" class="py-5 mx-auto">
                 <a href="deporte" type="button">
                     <img class="zoom1" src="/img/app/logoJugador1.png" srcset="/img/app/logoJugador1.png 1400w, /img/app/logoJugador1.png 300w"
-                    sizes="(mim-width: 300px) 33.3vw, 100vw" alt="Logo Jugador" class="mx-1">
+                    sizes="(mim-width: 500px) 33.3vw, 100vw" alt="Logo Jugador" class="mx-1">
                 </a>
                 <!--<a href="deporte" type="button" class="btn btn-success btn-lg" data-bs-toggle="tooltip"
                     data-bs-placement="top"
@@ -12,13 +12,12 @@
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
                 <!-- logo de la app -->
-                <img src="/img/app/logo4.png" srcset="/img/app/logo4.png 1024w, /img/app/logo4.png 300w"
-                    sizes="(mim-width: 300px) 33.3vw, 100vw" alt="Logo App" class="mx-1">
+                <img src="/img/app/logo4.png" alt="Logo App" class="mx-1">
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
                 <a href="duenio" type="button">
                     <img class="zoom1" src="/img/app/logoCancha1.png" srcset="/img/app/logoCancha1.png 1400w, /img/app/logoCancha1.png 300w"
-                    sizes="(mim-width: 300px) 33.3vw, 100vw"  alt="Logo Cancha" class="mx-1">
+                    sizes="(mim-width: 500px) 33.3vw, 100vw"  alt="Logo Cancha" class="mx-1">
                 </a>
                 <!--<a href="duenio" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip"
                     data-bs-placement="top"
