--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -14,7 +14,7 @@
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
                             data-bs-toggle="dropdown" aria-expanded="false">RESERVAS</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                            <li><a class="dropdown-item" href="establecimiento">Ver Reservas</a></li>
+                            <li><a class="dropdown-item" href="#">Ver Reservas</a></li>
                         </ul>
                     </a>
                 </div>
