--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -1,11 +1,11 @@
 <div id="cancha">
     <div class="container-fluid">
-        <div class="card text-center mb-4 p-1">
-            <h2 class="mb-3 mx-auto py-2">MIS CANCHAS</h2>
+        <div class="card text-center mb-4">
+            <h2 class="mb-3 mx-auto">MIS CANCHAS</h2>
         </div>
-        <div class="row">
+        <div id="scrollMisCanchas" class="row">
             {{#each establecimiento}}
-            <div class="col-4">
+            <div class="col-4 mb-4">
                 <div class="card bg-info">
                     <div class="card-header">
                         <b>Cancha Nº {{numeroCancha}} - {{deporte}}</b>
@@ -22,8 +22,8 @@
             </div>
             {{/each}}
         </div>
-        <div class="col-2  p-4">
-            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+        <div class="col-2 p-4">
+            <button onclick="location.href='/paginas/duenio'" class="btn btn-primary">Volver</button>
         </div>
         
     </div>
