--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -1,10 +1,11 @@
-<!--<div id="inicio">
+<div id="inicio">
     <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100" style="width: 34%"></div>
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
     </div>
     <main>
         <div class="d-flex flex-column p-3 text-white bg-dark" style="width: 300px; height: 530px;">
             <div class="text-center" disbled>
+                <a href="javascript: history.go(-1)" class="close" style="color: rgb(255, 0, 51);">&times;</a>
                 <h3>Elige un Deporte</h3>
                 <form action="/paginas/reservaDeporte1/" method="GET">
                 <select name="deporte" id="">
@@ -20,8 +21,8 @@
     </main>
 
 </div>
--->
 
+<!--
 <div id="ticket" style="height: 50vw; width: 100vw">
 <div class="container p-5">
     <div class="row row-cols-2">
@@ -46,3 +47,4 @@
 </div>
 
 </div>
+-->
