--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -2,11 +2,14 @@
     var fechaActual = new Date().toLocaleDateString();
     document.getElementById('fecha').setAttribute("min", fechaActual);
 </script>
-<div id="ticket" style="height: 50vw; width: 100vw">
-<div class="container p-5">
-    <div class="row row-cols-2">
-        <div class="col-sm-4 bg-white py-5">
+<div id="inicio">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+    </div>
+    <div class="d-flex justify-content-between">
+        <div class="flex-column p-3 text-white bg-dark" style="width: 300px; height: 530px;">
             <div class="text-center">
+                <a href="javascript: history.go(-1)" class="close" style="color: rgb(255, 0, 51);">&times;</a>
                 <h3>Establecimientos</h3>
                 <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
                     <label class="mt-3" for="fecha"><b>Elija un dia</b></label>
@@ -14,7 +17,7 @@
                     {{#each canchas}}
                     <div class="col-md-6 bg-info mb-3">
                         <b> {{nombreEstablecimiento}} <br>
-                            numero de la cancha {{numeroCancha}}
+                            Cancha Nº{{numeroCancha}}
                             <input type="radio" name="idCancha" value="{{id}}" required>
                     </div>
                     {{/each}}
@@ -24,20 +27,18 @@
             </div>
 
         </div>
-        <div class="col">
+        <div id="scrollJugador" class="col">
             <div class="row justify-content-around">
                 {{#each canchas}}
-                <div class="col m-3 bg-info">
+                <div class="col-3 m-4 bg-info">
                     <img src="/img/descarga/{{img}}" alt="" width="150" height="150">
-                    <b> {{nombreEstablecimiento}}
-                        numero de la cancha {{numeroCancha}}
+                    <b> {{nombreEstablecimiento}}</b>
+                    <b>Cancha Nº{{numeroCancha}}</b>
                 </div>
                 {{/each}}
             </div>
         </div>
     </div>
-</div>
-<div style="float: left" class="col-2  p-4">
-    <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
-</div>
+    
+    
 </div>
