--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -1,7 +1,11 @@
-<div id="ticket" style="height: 50vw; width: 100vw" >
-    <div class="container p-5">
-        <div class="col-4 mx-0 bg-white py-3">
+<div id="inicio">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+    </div>
+    <div class="d-flex flex-column p-3 text-white bg-dark" style="width: 300px; height: 530px;">
+        <div class="container">
             <div class="text-center">
+                <a href="javascript: history.go(-1)" class="close" style="color: rgb(255, 0, 51);">&times;</a>
                 <h3>Elige Turno</h3>
                 <button class="btn btn-warning mb-3" id="botonTurnos"
                     onclick="return misTurnos({{turno.horaInicio}}, {{turno.horaFin}})">Ver Turnos</button>
@@ -14,9 +18,6 @@
                     <button type="submit" class="btn btn-success text-dark">Reservar</button>
                 </form>
             </div>
-        </div>
-        <div style="float: left" class="col-2 p-3 mb-3">
-            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
         </div>
     </div>
 </div>
