--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -1,5 +1,5 @@
 <div id="cancha">
-    <div class="container-fluid">
+    <div class="container-fluid p-5">
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-md-9 m-auto p-2">
                 <div class="navbar-brand">
