--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -1,15 +1,15 @@
-<div id="cancha" style="height: 40vw; width: 100vw>
+<div id="cancha" style="height: 40vw; width: 100vw">
     <div class="container">
         <h2 class="mb-3 text-white text-center">MIS CANCHAS</h2>
         <div class="row justify-content-around">
             {{#each establecimiento}}
             <div class="col-md-4 mb-3 m-2 pb-5">
-                <div class="card bg-info">
+                <div class="card bg-secondary">
                     <div class="card-header">
                         <b><u>Numero de Cancha</u> {{numeroCancha}} <u>Deporte</u> {{deporte}}</b>
                     </div>
                     <div class="card-body">
-                        <img src="/img/descarga/{{img}}" alt="" width="150" height="150">
+                        <img src="/img/descarga/{{img}}" alt="" width="250" height="200">
                     </div>
                     <div class="card-footer">
                         <b>Horarios </b>
