--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -22,8 +22,8 @@
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
                         <form class="d-flex" action="">
-                            <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar" autofocus>
-                            <button class="btn btn-danger" type="reset">
+                            <input type="text" class="form-control" id= "formulario" placeholder="Buscar" autofocus>
+                            <button class="btn btn-danger" type="reset" id="boton">
                                 <i class="fas fa-search"></i>
                             </button>
                         </form>
