--- a/src/views/paginas/prueba.hbs
+++ b/src/views/paginas/prueba.hbs
@@ -3,3 +3,13 @@
     <button type="submit">Cargar</button>
 </form>
 <img src="" alt="" width="300" height="300">
+
+
+
+                    const formulario = document.querySelector('#formulario');
+                    const boton = document.querySelector('#boton');
+
+                    const filtrar= ()=>{
+                        
+                    }
+                
