--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -1,6 +1,6 @@
 <div id="cancha" style="width: 100vw; height: 33rem">
     <div class="container-fluid p-3">
-        <div class="card bg-primary col-md-5 m-auto p-5">
+        <div class="card bg-dark col-md-5 m-auto p-5">
             <div class="col-md-15">
                 {{#with establecimiento}}
                 <div class="card text-center mb-4">
