--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -8,34 +8,51 @@
     </div>
     <div class="d-flex justify-content-between">
         <div class="flex-column p-3 text-white bg-dark" style="width: 300px; height: 530px;">
-            <div class="text-center">
+            <div class="container text-center">
                 <a href="javascript: history.go(-1)" class="close" style="color: rgb(255, 0, 51);">&times;</a>
                 <h3>Establecimientos</h3>
                 <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
-                    <label class="mt-3" for="fecha"><b>Elija un dia</b></label>
+                    <label class="mt-3 " for="fecha"><b>Elije un día</b></label>
                     <input id="fecha" type="date" value="09/16/2021" name="fecha" required>
                     {{#each canchas}}
-                    <div class="col-md-6 bg-info mb-3">
+                    <div class="col-md-7 bg-info mb-3 mt-3">
                         <b> {{nombreEstablecimiento}} <br>
                             Cancha Nº{{numeroCancha}}
                             <input type="radio" name="idCancha" value="{{id}}" required>
                     </div>
                     {{/each}}
-
                     <button class="btn btn-success" type="submit">Aceptar</button>
                 </form>
             </div>
-
         </div>
-        <div id="scrollJugador" class="col">
-            <div class="row justify-content-around">
+        <div class="container">
+            <div  class="">
+                <div id="scrollJugador">
                 {{#each canchas}}
-                <div class="col-3 m-4 bg-info">
-                    <img src="/img/descarga/{{img}}" alt="" width="150" height="150">
-                    <b> {{nombreEstablecimiento}}</b>
-                    <b>Cancha Nº{{numeroCancha}}</b>
-                </div>
+                    <div class="col-3 mx-auto mt-3">
+                        <!--<div class="col-3 m-4 bg-info">
+                            <img src="/img/descarga/{{img}}" alt="" width="150" height="150">
+                            <b> {{nombreEstablecimiento}}</b>
+                            <b>Cancha Nº{{numeroCancha}}</b>
+                        </div>-->
+                        <div class="">
+                            <div class="card bg-info">
+                                <div class="card-header">
+                                    <b>Cancha Nº {{numeroCancha}} - {{deporte}}</b>
+                                </div>
+                                <div class="card-body">
+                                    <img src="/img/descarga/{{img}}" alt="" width="150" height="150">
+                                </div>
+                                <div class="card-footer">
+                                    <b>Horario -</b>
+                                    <b>De {{horaInicio}}hs</b>
+                                    <b>a {{horaFin}}hs</b>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 {{/each}}
+                </div>
             </div>
         </div>
     </div>
