--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -27,6 +27,11 @@
                                 <i class="fas fa-search"></i>
                             </button>
                         </form>
+                       <script>
+                           const formulario = document.querySelector('#formulario');
+                           const boton = document.querySelector('#boton');
+                           
+                       </script> 
                     </div>
                 </div>
                 <div id="scroll">
