--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -1,7 +1,7 @@
 <div id="cancha">
-    <div class="container-fluid p-5">
+    <div class="container-fluid">
         <div class="row justify-content-between">
-            <div id="tablaEquipo" class="col-md-9 m-auto p-2">
+            <div id="tablaEquipo" class="col-md-8 m-auto py-3">
                 <div class="navbar-brand">
                     <a class="navbar-brand">
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
