--- a/src/views/paginas/establecimiento.hbs
+++ b/src/views/paginas/establecimiento.hbs
@@ -1,6 +1,40 @@
 <div id="cancha">
     <div class="col-md-6 mx-auto p-4">
         
+        <div class=" card text-center mb-4 p-3">
+            <h2>Nuevo Establecimiento</h2>
+        </div>
+        <form id="semiTransparente" class="p-5">
+            <div class="input-group mb-3">          
+                <b><span style="color: red;">*  </span></b>                      
+                <input type="number" class="form-control" name="cuit" placeholder="Ingrese su Cuit sin guiones" max="11" min="11" required>
+            </div>
+                <div class="input-group mb-3">          
+                <b><span style="color: red;">*  </span></b>                      
+                <input type="text" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required>
+            </div>
+                <div class="input-group mb-3">          
+                <b><span style="color: red;">*  </span></b>                      
+                <input type="text" class="form-control" name="direccion" placeholder="Direccion" required>
+            </div>                             
+            <b><span style="color: red;"><b>*</b></span><span style="font-size:small"> CAMPOS OBLIGATORIOS</span></b>                          
+            
+            <span><hr class="dropdown-divider"></span>
+            <div class="col-md-6 mx-auto pb-2">
+                <button type="submit" class="btn btn-success btn-block">
+                    Cargar
+                </button>
+                <button onclick="location.href='/paginas/duenio'" class="btn btn-danger btn-block">
+                    Cancelar
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+<!--
+<div id="cancha">
+    <div class="col-md-6 mx-auto p-4">
+        
         <div class=" card text-center mb-4 p-1">
             <h2>Nuevo Establecimiento</h2>
         </div>
@@ -30,3 +64,4 @@
         </form>
     </div>
 </div>
+-->
