--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -1,11 +1,17 @@
 <main class="formulario">
     <div class="container">
-        <div class="row justify-content-between">
+        <div class="row ">
             <div id= "inicioCentrar" class="col-md-4 py-5">
                 <!--agregue logo de la app -->               
-                <a title="logoApp" href='/' ><img src="/img/app/logo4.png" srcset="/img/app/logo4.png 1024w, /img/logo4.png 320w" sizes="(mim-width: 320px) 33vw, 100vw" alt="logoApp"></a> 
+                <a title="logoApp" href='/'><img class="zoom"  src="/img/app/logo4.png" srcset="/img/app/logo4.png 1024w, /img/logo4.png 320w" sizes="(mim-width: 320px) 33vw, 100vw" alt="logoApp"></a>                
+                <div id="semiTransparente" class="container-fluid">
+                    <div class="row"> 
+                        <h4 style="text-align: unset; color:rgb(255, 255, 255);" ><i>Unite a la comunidad de </i><b style="color: rgba(96, 98, 223, 0.979);">APPasionados</b> <i>y disfrutá del deporte que más te apasiona.</i> </h4>
+                    </div>
+                    
+                </div>
             </div>
-            <div class="col-md-4 py-4">
+            <div class="col offset-md-3">
                 <div id="card" class="card">
                     <div class="card-header">
                         <h3>Registro</h3>
