--- a/src/views/paginas/establecimiento.hbs
+++ b/src/views/paginas/establecimiento.hbs
@@ -5,18 +5,19 @@
             <h2>Nuevo Establecimiento</h2>
         </div>
         <form id="semiTransparente" class="p-5">
+            
             <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
-                <input type="number" class="form-control" name="cuit" placeholder="Ingrese su Cuit sin guiones" max="11" min="11" required>
+                <input type="text" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required autofocus>
             </div>
-                <div class="input-group mb-3">          
-                <b><span style="color: red;">*  </span></b>                      
-                <input type="text" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required>
-            </div>
-                <div class="input-group mb-3">          
+            <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
                 <input type="text" class="form-control" name="direccion" placeholder="Direccion" required>
-            </div>                             
+            </div>    
+            <div class="input-group mb-3">          
+                <b><span style="color: red;">*  </span></b>                      
+                <input type="number" class="form-control" name="cuit" placeholder="CUIT (sin guiones)" maxlength="11" minlength="11" required>
+            </div>                         
             <b><span style="color: red;"><b>*</b></span><span style="font-size:small"> CAMPOS OBLIGATORIOS</span></b>                          
             
             <span><hr class="dropdown-divider"></span>
