--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -21,9 +21,9 @@
                         </ul>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
-                        <form class="d-flex" action="">
-                            <input type="text" class="form-control" id= "formulario" placeholder="Buscar" autofocus>
-                            <button class="btn btn-danger" type="reset" id="boton">
+                        <form class="d-flex" method="GET" action="">
+                            <input type="search" class="form-control" id= "formulario" placeholder="Buscar" autofocus>
+                            <button class="btn btn-danger" type="submit" id="boton">
                                 <i class="fas fa-search"></i>
                             </button>
                         </form>
