--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -1,6 +1,6 @@
 <div id="cancha">
     <div class="container-fluid">
-        <div class="col-md-5 mx-auto p-4">
+        <div class="col-md-5 mx-auto p-3">
             <div class="card text-center">
                 <h2>Nueva Cancha</h2>
                 <h2>"{{datosEstablecimiento.nombreEstablecimiento}}"</h2>
@@ -8,7 +8,7 @@
             <div id="semiTransparente" class="text-white">
                 <form action="/paginas/cancha/{{idEstablecimiento}}" method="POST" enctype="multipart/form-data">
                     
-                    <div class="container mt-4 py-1">
+                    <div class="container mt-4 ">
                         <label for="numeroCancha">Numero de Cancha<span style="color: red;"> *</span></label>
                         <input type="number" name="numeroCancha" class="col-2 m-2" min="1" required>
                         <select name="idDeportes" class="btn btn-ls btn-primary" required>
@@ -21,7 +21,7 @@
                         
                         </select>
                     </div>
-                    <div class="mb-2">
+                    <div class="container mt-2">
                         <label for="dias">Dias de Atencion <span style="color: red;">* </span></label><br>
                         <div class="container justify-content-around">
                             <label for="dias"><input type="checkbox" name="dia[]" value=1> Lunes</label>
@@ -33,7 +33,7 @@
                             <label for="dias"><input type="checkbox" name="dia[]" value=0> Domingo</label>
                         </div>
                     </div>
-                    <div class="text-center mb-3">
+                    <div class="container  py-2">
                         <label for="horario">Horario de Atencion <span style="color: red;"> * </span></label>
                         <select name="horaInicio" class="btn btn-ls btn-primary" required>
                             <option>Desde</option>
@@ -90,9 +90,10 @@
                             <option value="24" type="number">24</option>
                         </select><span class="m-1"><b>Hs</b></span>
                     </div>
-                    <div class="">
+                    <div class="container mt-3">
                         <label for="imagen"><span style="color: red;"> * </span><input type="file" name="imagen" id="imagen" required></label>
                     </div>
+                    <span><hr class="dropdown-divider"></span>
                     <div class="col-5 mx-auto">
                         <button type="submit" class="btn btn-success btn-block">
                             Cargar
