toast funcionando sin implementarlo

--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -67,7 +67,7 @@
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
                         <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar" autofocus>
-                        <button class="btn btn-danger" type="reset">
+                        <button id="msj" class="btn btn-danger" type="reset">
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
