--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -22,6 +22,19 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
     <link rel="manifest" href="/img/favicon/site.webmanifest">
 
+{{!--toast--}}
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+        toastr.options.timeOut = 1500; 
+        $('#msj').click(function() {
+        toastr.success('Generado con éxito');
+        });
+    });
+    </script>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     
