--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -2,10 +2,10 @@
     var fechaActual = new Date().toLocaleDateString();
     document.getElementById('fecha').setAttribute("min", fechaActual);
 </script>
-<div id="ticket" style="height: 50vw; width: 100vw">
-    <div class="container p-5">
+<div id="ticket">
+    <div class="container p-5" >
         <div class="row row-cols-2">
-            <div class="col-sm-4 bg-white py-5">
+            <div class="col-sm-4 py-5" style="background-color: rgb(255, 255, 255, 0.4);">
                 <div class="text-center">
                     <h3>Establecimientos</h3>
                     <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
@@ -27,13 +27,13 @@
             <div class="col">
                 <div class="row justify-content-around">
                     {{#each canchas}}
-                    <div class="col-md-6">
+                    <div class="col">
                         <div class="card bg-secondary">
                             <div class="card-header">
                                 {{nombreEstablecimiento}}
                             </div>
                             <div class="card-body">
-                                <img src="/img/descarga/{{img}}" alt="" width="200" height="200">
+                                <img src="/img/descarga/{{img}}" alt="" width="250" height="200">
                             </div>
                             <div class="card-footer">
                                 Cancha Nro : {{numeroCancha}}
@@ -45,7 +45,9 @@
             </div>
         </div>
     </div>
-    <div style="float: left" class="col-2  p-4">
-        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+    <div class="row py-5">
+        <div style="float: left" class="col-2 p-5">
+            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+        </div>
     </div>
 </div>
