--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -1,6 +1,6 @@
-<div id="ticket" style="height: 50vw; width: 100vw" >
-    <div class="container p-5">
-        <div class="col-4 mx-0 bg-white py-3">
+<div id="ticket">
+    <div class="container py-5">
+        <div class="col-4 py-3" style="background-color: rgb(255, 255, 255, 0.4);">
             <div class="text-center">
                 <h3>Elige Turno</h3>
                 <button class="btn btn-warning mb-3" id="botonTurnos"
@@ -15,9 +15,11 @@
                 </form>
             </div>
         </div>
-        <div style="float: left" class="col-2 p-3 mb-3">
+         <div class="row py-5">
+        <div style="float: left" class="col-2 p-5">
             <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
         </div>
+    </div>
     </div>
 </div>
 <script type="text/javascript">
@@ -25,7 +27,8 @@
         for (var i = a; i <= b; i++) {
             {{#each reservas }}
             if (i == {{ hora }})
-        { document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-danger"><input type="radio" name="turno" id="" value="${i}" disabled> ${i} Hs</div>`; }
+        { document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-danger"><input type="radio" name="turno" id="" value="${i}" disabled> ${i} Hs</div>`; continue
+         }
             {{/each}}
                 document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-primary"><input type="radio" name="turno" id="" value="${i}" required> ${i} Hs</div>`;
             }
