--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -16,7 +16,7 @@
                 <td>{{numeroCancha}}</td>
                 <td>{{deporte}}</td>
                 <td>{{fecha}}</td>
-                <td>{{hora}}</td>
+                <td>{{hora}}:00 Hs</td>
             </tr>
             {{/each}}
         </tbody>
