--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -39,7 +39,7 @@
             </ul>
         </div>
         <li class="navbar-nav nav-item">
-            <a type="button" class="btn btn-primary" href="#<!--/paginas/reservaDeporte-->">Reservá ya!</a>
+            <a type="button" class="btn btn-primary" href="/paginas/reservaDeporte">Reservá ya!</a>
         </li>
         
         <li class="navbar-nav nav-item">
