--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -2,26 +2,22 @@
     <div class="container-flex">
         <div class="d-flex justify-content-around p-4">
             <div id="btnCentro" class="py-5 mx-auto">
-                <a href="deporte" type="button">
+                <a href="deporte" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Ingresa para realizar deportes.">
+                    <!-- logo jugador -->
                     <img class="zoom1" src="/img/app/logoJugador1.png" srcset="/img/app/logoJugador1.png 1400w, /img/app/logoJugador1.png 300w"
                     sizes="(mim-width: 500px) 33.3vw, 100vw" alt="Logo Jugador" class="mx-1">
                 </a>
-                <!--<a href="deporte" type="button" class="btn btn-success btn-lg" data-bs-toggle="tooltip"
-                    data-bs-placement="top"
-                    title="Inicia como jugador para ser parte de un equipo y realizar deportes.">JUGADOR</a>-->
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
                 <!-- logo de la app -->
                 <img src="/img/app/logo4.png" alt="Logo App" class="mx-1">
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
-                <a href="duenio" type="button">
+                <a href="duenio" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Ingresa para subir tus canchas.">
+                    <!-- logo cancha -->
                     <img class="zoom1" src="/img/app/logoCancha1.png" srcset="/img/app/logoCancha1.png 1400w, /img/app/logoCancha1.png 300w"
                     sizes="(mim-width: 500px) 33.3vw, 100vw"  alt="Logo Cancha" class="mx-1">
                 </a>
-                <!--<a href="duenio" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip"
-                    data-bs-placement="top"
-                    title="Inicia como cancha para ingresar tu establecimiento deportivo.">CANCHA</a>-->
             </div>
         </div>
      
