--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -1,50 +1,53 @@
-<div id="inicio">
+<!--
+<div id="ticket">
     <div class="progress">
         <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
     </div>
     <main>
-        <div class="d-flex flex-column p-3 text-white bg-dark" style="width: 300px; height: 530px;">
-            <div class="text-center" disbled>
-                <a href="javascript: history.go(-1)" class="close" style="color: rgb(255, 0, 51);">&times;</a>
-                <h3>Elige un Deporte</h3>
-                <form action="/paginas/reservaDeporte1/" method="GET">
-                <select name="deporte" id="">
-                    {{#each deporte}}
-                    <option value="{{idDeportes}}">{{deporte}}</option>
-                    {{/each}}
-                </select>
-                <button type="submit" class="btn btn-success">Aceptar</button>
-                </form>
-            </div>
-        </div>
-
-    </main>
-
-</div>
-
-<!--
-<div id="ticket" style="height: 50vw; width: 100vw">
-<div class="container p-5">
-    <div class="row row-cols-2">
-        <div class="col-4 m-0 bg-white py-5">
-            <div class="text-center" disbled>
-                <h3>Elige un Deporte</h3>
-                <form action="/paginas/reservaDeporte1/" method="GET">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-around">
+                <div id="semiTransparente" class="p-5 text-white">
+                    <a href="javascript: history.go(-1)" class="close" style="color: rgb(255, 0, 51);">&times;</a>
+                    <h3>Elige un Deporte</h3>
+                    <form action="/paginas/reservaDeporte1/" method="GET">
                     <select name="deporte" id="">
                         {{#each deporte}}
                         <option value="{{idDeportes}}">{{deporte}}</option>
                         {{/each}}
                     </select>
                     <button type="submit" class="btn btn-success">Aceptar</button>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-       
-    </div>
-   <div style="float: left" class="col-2 p-5">
-    <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
-</div>
-</div>
+
+    </main>
 
 </div>
 -->
+
+<div id="ticket">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
+    </div>
+    <div class="container-fluid">
+        <div class="row row-cols-2">
+            <div class="col-4 m-0 bg-white py-5">
+                <div class="text-center" disbled>
+                    <h3>Elige un Deporte</h3>
+                    <form action="/paginas/reservaDeporte1/" method="GET">
+                        <select name="deporte" id="">
+                            {{#each deporte}}
+                            <option value="{{idDeportes}}">{{deporte}}</option>
+                            {{/each}}
+                        </select>
+                        <button type="submit" class="btn btn-success">Aceptar</button>
+                        <div class="col-1 mt-5 py-1">
+                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-outline-danger">Volver</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
